--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@n3dst4/eslint-config-n3dst4",
   "version": "1.0.0",
-  "description": "My shared ESLint settings",
+  "description": "My personal ESLint settings",
   "main": "index.js",
   "repository": {
     "type": "git",
@@ -12,18 +12,18 @@
   },
   "author": "Neil de Carteret <npm@lumphammer.com>",
   "license": "ISC",
-  "devDependencies": {
-  },
+  "devDependencies": {},
   "peerDependencies": {
-    "babel-eslint": "*",
     "eslint": "*",
-    "eslint-plugin-react": "*"
   },
   "bugs": {
     "url": "https://github.com/n3dst4/eslint-config-n3dst4/issues"
   },
   "homepage": "https://github.com/n3dst4/eslint-config-n3dst4",
-  "dependencies": {},
+  "dependencies": {
+    "babel-eslint": "^4.0.0",
+    "eslint-plugin-babel": "^3.0.0"
+  },
   "keywords": [
     "eslint",
     "eslint-config"
