--- a/package.json
+++ b/package.json
@@ -14,15 +14,15 @@
   "license": "ISC",
   "devDependencies": {},
   "peerDependencies": {
-    "eslint": "*"
+    "eslint": "*",
+    "babel-eslint": "^4.0.0",
+    "eslint-plugin-babel": "^3.0.0"
   },
   "bugs": {
     "url": "https://github.com/n3dst4/eslint-config-n3dst4/issues"
   },
   "homepage": "https://github.com/n3dst4/eslint-config-n3dst4",
   "dependencies": {
-    "babel-eslint": "^4.0.0",
-    "eslint-plugin-babel": "^3.0.0"
   },
   "keywords": [
     "eslint",
