--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@n3dst4/eslint-config-n3dst4",
-  "version": "1.1.0",
+  "version": "1.2.0",
   "description": "My personal ESLint settings",
   "main": "index.js",
   "repository": {
@@ -22,8 +22,7 @@
     "url": "https://github.com/n3dst4/eslint-config-n3dst4/issues"
   },
   "homepage": "https://github.com/n3dst4/eslint-config-n3dst4",
-  "dependencies": {
-  },
+  "dependencies": {},
   "keywords": [
     "eslint",
     "eslint-config"
