--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
   "devDependencies": {},
   "peerDependencies": {
     "eslint": "*",
-    "babel-eslint": "^4.0.0",
-    "eslint-plugin-babel": "^3.0.0"
+    "babel-eslint": ">=4.0.0",
+    "eslint-plugin-babel": ">=3.0.0"
   },
   "bugs": {
     "url": "https://github.com/n3dst4/eslint-config-n3dst4/issues"
