--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "license": "ISC",
   "devDependencies": {},
   "peerDependencies": {
-    "eslint": "*",
+    "eslint": ">=2.0.0",
     "babel-eslint": ">=4.0.0",
     "eslint-plugin-babel": ">=3.0.0"
   },
