--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
   "peerDependencies": {
     "eslint": ">=2.0.0",
     "babel-eslint": ">=4.0.0",
-    "eslint-plugin-babel": ">=3.0.0"
+    "eslint-plugin-babel": ">=3.0.0",
+    "eslint-plugin-react": ">=5.1.1"
   },
   "bugs": {
     "url": "https://github.com/n3dst4/eslint-config-n3dst4/issues"
